feat(parallax): remove 4d package cover
